# lix

./: .gitignore  .infisical.json  .prettierignore  .prettierrc.json  @optimization.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  backend_spec.md  notes.md  nx.json  observations.md  optimization.md  optimization2.md  optimization3.md  optimization_log.md  optimization_log10_untracked_state.md  optimization_log11.md  optimization_log12.md  optimization_log13_changelog.md  optimization_log20_storage_v2.md  optimization_log30_backend_api.md  optimization_log6_crud.md  optimization_log7.md  optimization_log8.md  optimization_log9_sql2.md  optimizations2.md  package.json  physical_layout.md  plan-feature-matrix.md  plan.dependency.md  plan.global_cleanup.md  plan.md  plan.observe.md  plan.validation.md  plan1.md  plan10.md  plan11.md  (+37 more)
.cargo/: config.toml
benchmarks/10k-entities/: Cargo.toml  README.md
benchmarks/10k-entities/src/: main.rs  sqlite_backend.rs  wasmtime_runtime.rs
benchmarks/engine2-json-pointer/: Cargo.toml  README.md
benchmarks/engine2-json-pointer/src/: main.rs  sqlite_backend.rs
benchmarks/git-compare/: Cargo.toml  README.md
benchmarks/git-compare/src/: main.rs  sqlite_backend.rs
experiments/p3-stream-probe/host/: Cargo.toml
experiments/p3-stream-probe/host/src/: main.rs
experiments/persistent-csv-wasm/: Cargo.toml  README.md
experiments/persistent-csv-wasm/guest/: Cargo.toml
experiments/persistent-csv-wasm/guest/src/: lib.rs
experiments/persistent-csv-wasm/src/: main.rs
experiments/plugin-api-p3/host/: Cargo.toml
experiments/plugin-api-p3/host/src/: main.rs
experiments/plugin-api-v2/: Cargo.toml  README.md
experiments/plugin-api-v2/api-candidates/: Cargo.toml  README.md
experiments/plugin-api-v2/api-candidates/src/: candidate_a.rs  candidate_b.rs  candidate_b_refined.rs  candidate_c.rs  candidate_d.rs  current_v1.rs  lib.rs  types.rs
experiments/plugin-api-v2/ax-eval/: README.md  codex_ax_eval.py
experiments/plugin-api-v2/ax-eval/schemas/: index.schema.json  result.schema.json
experiments/plugin-api-v2/ax-eval/starter/: Cargo.toml  README.md
experiments/plugin-api-v2/ax-eval/tasks/: csv.md  excalidraw.md  final-aligned.md  json.md  markdown.md  production-v2-tsv.md  text.md
experiments/plugin-api-v2/ax-eval/tests/: test_codex_ax_eval.py
experiments/plugin-api-v2/engine-bench/: README.md  json_paired_gate.py  paired_gate.py  run_json_diagnostic.py  run_json_paired.py  run_paired.py  test_json_paired_gate.py  test_paired_gate.py  test_run_json_diagnostic.py  test_run_json_paired.py
experiments/plugin-api-v2/guest/: Cargo.toml
experiments/plugin-api-v2/guest/src/: lib.rs
experiments/plugin-api-v2/host/: Cargo.toml
experiments/plugin-api-v2/host/src/: main.rs
experiments/plugin-api-v2/results/: mechanism-benchmark-macos-aarch64.json
experiments/plugin-api-v2/wit/: lix-plugin-v2.wit  packet-v1.md
plugins/abi-bench-rich/: Cargo.toml
plugins/abi-bench-rich/src/: lib.rs
plugins/csv/: Cargo.toml  README.md  manifest.json
plugins/csv-v2/: Cargo.toml  README.md  manifest.json
plugins/csv-v2/schema/: csv_row.json  csv_table.json  csv_v2_row.json  csv_v2_table.json
plugins/csv-v2/src/: bindings.rs  core.rs  lib.rs  packet.rs  tests.rs
plugins/csv/schema/: csv_document.json  csv_row.json  csv_table.json
plugins/csv/src/: csv.rs  diff.rs  lib.rs  order_key.rs  schemas.rs
plugins/csv/tests/: roundtrip.rs  schema.rs  stub.rs
plugins/excalidraw-v2/: Cargo.toml  README.md  manifest.json
plugins/excalidraw-v2/schema/: excalidraw_element.json  excalidraw_file.json  excalidraw_scene.json
plugins/excalidraw-v2/src/: bindings.rs  core.rs  lib.rs  packet.rs  tests.rs
plugins/json/: Cargo.toml  README.md  manifest.json
plugins/json-v2/: Cargo.toml  README.md  manifest.json
plugins/json-v2/schema/: json_array_item.json  json_object_member.json  json_property.json  json_root.json
plugins/json-v2/src/: bindings.rs  core.rs  lib.rs  packet.rs  tests.rs
plugins/json/benches/: apply_changes.rs  detect_changes.rs  render_changes.rs  roundtrip.rs
plugins/json/benches/common/: mod.rs
plugins/json/src/: lib.rs
plugins/json/tests/: apply_changes.rs  detect_changes.rs  render_changes.rs  roundtrip.rs  schema.rs
plugins/json/tests/common/: mod.rs
plugins/markdown/: Cargo.toml  README.md  manifest.json
plugins/markdown-v2/: Cargo.toml  README.md  manifest.json
plugins/markdown-v2/schema/: markdown_node_v2.json
plugins/markdown-v2/src/: bindings.rs  core.rs  lib.rs  markdown_file.rs  model.rs  packet.rs  schemas.rs  tests.rs
plugins/markdown-v2/tests/: diffing.rs  projection.rs  roundtrip.rs  roundtrip_corpus.rs  schema.rs  v2_contract.rs
plugins/markdown-v2/tests/support/: mod.rs
plugins/markdown/benches/: detect_changes.rs
plugins/markdown/benches/common/: mod.rs
plugins/markdown/examples/: v2_write_amplification.rs
plugins/markdown/investigations/: entity-granularity-report.md  v2-implementation-results.md
plugins/markdown/schema/: markdown_block.json  markdown_document.json  markdown_node.json
plugins/markdown/src/: apply_changes.rs  common.rs  detect_changes.rs  lib.rs  markdown_file.rs  model.rs  render_changes.rs  schemas.rs
plugins/markdown/tests/: apply_changes.rs  detect_changes.rs  diffing.rs  projection.rs  render_changes.rs  roundtrip.rs  roundtrip_corpus.rs  schema.rs  v2_contract.rs
plugins/markdown/tests/common/: mod.rs
plugins/order-key/: Cargo.toml
plugins/order-key/src/: lib.rs
plugins/sem/: Cargo.toml  manifest.json
plugins/sem/schema/: sem_entity.json
plugins/sem/src/: lib.rs
plugins/sem/tests/: detect_changes.rs  pk_stability.rs  render.rs  roundtrip.rs  schema.rs
plugins/text/: Cargo.toml  README.md  manifest.json
plugins/text/benches/: apply_changes.rs  detect_changes.rs  render_changes.rs
plugins/text/schema/: text_document.json  text_line.json
plugins/text/src/: diff.rs  lib.rs  order_key.rs  schemas.rs  text.rs
plugins/text/tests/: apply_changes.rs  detect_changes.rs  render_changes.rs  roundtrip.rs  schema.rs
(+260 files in other folders)
