[workspace]
resolver = "3"
members = [
  "benchmarks/*",
  "packages/*",
]
exclude = [
  "packages/js-kysely",
  "packages/plugin-json-v2",
  "packages/react-utils",
  "packages/website",
]

[workspace.package]
version = "0.0.0"
authors = ["Opral Team"]
edition = "2024"
license = "LicenseRef-opral"
publish = false
rust-version = "1.93"
