[workspace]
resolver = "3"
members = [
  "packages/*",
]

[workspace.package]
version = "0.6.0"
authors = ["Opral"]
edition = "2024"
license = "LicenseRef-opral"
publish = false
rust-version = "1.93"

[workspace.dependencies]
lix_engine = { path = "packages/engine", version = "0.6.0" }
lix_sdk = { path = "packages/rs-sdk", version = "0.6.0" }
