[package]
name = "ten_k_entities_benchmark"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bytes = "1"
clap = { version = "4.5.31", features = ["derive"] }
lix_rs_sdk = { path = "../../packages/rs-sdk" }
plugin_json_v2 = { path = "../../packages/plugin-json-v2", artifact = "cdylib", target = "wasm32-wasip2", lib = true }
pollster = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasmtime = { version = "30", features = ["component-model"] }
wasmtime-wasi = "30"
zip = { version = "2", default-features = false, features = ["deflate"] }
