[package]
name = "engine2_json_pointer_benchmark"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1"
bytes = "1"
clap = { version = "4.5.31", features = ["derive"] }
lix_rs_sdk = { path = "../../packages/rs-sdk" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
