[package]
name = "git_compare_benchmark"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bytes = "1"
clap = { version = "4.5.31", features = ["derive"] }
lix_engine = { path = "../../packages/engine" }
lix_rs_sdk = { path = "../../packages/rs-sdk" }
pollster = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
