[workspace]
members = ["guest", "host"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.93"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasmtime = { version = "45", default-features = false, features = ["cranelift", "runtime", "std"] }

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
