[package]
name = "plugin_csv_v2"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytecount = "0.6"
chardetng = "1"
csv = "1"
csv-nose = { version = "1.0.1", default-features = false }
encoding_rs = "0.8"
itertools = "0.14"
rand = { version = "0.9", features = ["small_rng"] }
serde_json = "1"
wit-bindgen = "0.40"
