[package]
name = "plugin_excalidraw_v2"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Excalidraw scene plugin for the Lix Wasm Component v2 API"
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lix_order_key.workspace = true
serde_json = "1"
wit-bindgen = "0.57"
