[package]
name = "plugin_json_v2"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wit-bindgen = "0.40"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "detect_changes"
harness = false

[[bench]]
name = "render_changes"
harness = false

[[bench]]
name = "roundtrip"
harness = false
