[package]
name = "plugin_markdown_incremental_v2"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "GitHub Flavored Markdown plugin for the Lix Wasm Component v2 API"
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22"
chardetng = "1"
encoding_rs = "0.8"
lix_order_key.workspace = true
markdown-syntax = "=0.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "std", "js", "fast-rng"] }
wit-bindgen = "0.57"

[dev-dependencies]
markdown = "1"
