[package]
name = "plugin_md_v2"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
markdown = { version = "1", features = ["serde"] }
# Temporary workspace unblock: local dependency is missing in this checkout.
# markdown_wc = { path = "../../../markdown-wc" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"
unicode-normalization = "0.1"
wit-bindgen = "0.40"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "detect_changes"
harness = false
