[package]
name = "text_plugin"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chardetng = "1"
encoding_rs = "0.8"
imara-diff = "0.2"
serde_json = "1"
uuid = { version = "1", features = ["v7", "std", "js", "fast-rng"] }
wit-bindgen = "0.57"

[dev-dependencies]
rand = { version = "0.9", features = ["small_rng"] }
