[package]
name = "plugin-api-p3-host"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
bytes = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wasmtime = { version = "=47.0.2", default-features = false, features = ["anyhow", "component-model-async", "component-model-bytes", "cranelift", "runtime", "std"] }
wasmtime-wasi = { version = "=47.0.2", default-features = false, features = ["p2", "p3"] }
