[package]
name = "ax-plugin-submission"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
csv = "1"
lix-plugin-api-candidates = { path = "../../../../api-candidates" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace]

[lints.rust]
unsafe_code = "forbid"

